--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@angular/platform-browser": "^14.0.0",
         "@angular/platform-browser-dynamic": "^14.0.0",
         "@angular/router": "^14.0.0",
-        "rxjs": "~7.5.0",
+        "rxjs": "^7.5.6",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     },
@@ -39,16 +39,16 @@
         "@angular/cli": "~14.2.1",
         "@angular/compiler-cli": "^14.0.0",
         "@angular/localize": "^14.2.1",
-        "@types/jasmine": "~4.0.0",
+        "@types/jasmine": "^4.3.0",
         "@typescript-eslint/eslint-plugin": "5.36.2",
         "@typescript-eslint/parser": "5.36.2",
         "eslint": "^8.23.0",
-        "jasmine-core": "~4.3.0",
+        "jasmine-core": "^4.4.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
-        "typescript": "~4.7.2"
+        "typescript": "^4.8.2"
     }
 }
