--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
         "@typescript-eslint/eslint-plugin": "5.36.2",
         "@typescript-eslint/parser": "5.36.2",
         "eslint": "^8.23.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-import-resolver-typescript": "^3.5.1",
+        "eslint-plugin-deprecation": "^1.3.2",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsdoc": "^39.3.6",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "jasmine-core": "^4.4.0",
         "json-server": "^0.17.0",
         "karma": "~6.4.0",
